# create-fast-stack

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  PENTOAI_ANALYSIS.md  PENTOAI_CODE_REFERENCE.md  README.md  Specs.md  package.json  tsconfig.json  tsdown.config.ts
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-28-react-vite-template-upgrade.md
scripts/: release.sh
skills/agent-browser/: SKILL.md
skills/github-pr/: SKILL.md
skills/pytest/: SKILL.md
skills/tailwind-4/: SKILL.md
skills/typescript/: SKILL.md
src/: cli.ts  config.ts  constants.ts  index.ts  types.ts
src/commands/: create.ts  index.ts
src/generator/: addon-injector.ts  file-copier.ts  handlebars-processor.ts  index.ts  (+2 more)
templates/backends/python-fastapi/: .gitignore  CLAUDE.md  README.md  pyproject.toml  ruff.toml
templates/backends/python-fastapi/api/: app.py  context.py  deps.py  main.py  middleware.py
templates/backends/python-fastapi/api/endpoints/: health.py
templates/backends/python-fastapi/core/: exceptions.py  logger.py  settings.py
templates/backends/python-fastapi/core/utils/: datetime_utils.py
templates/backends/python-fastapi/schemas/: settings.py
templates/backends/rust-axum/: .env.example  CLAUDE.md  Cargo.toml  README.md
templates/backends/rust-axum/src/: config.rs  error.rs  main.rs  routes.rs
templates/backends/rust-axum/src/handlers/: health.rs  mod.rs
templates/backends/rust-axum/src/middleware/: mod.rs  request_id.rs
tests/: e2e-docker.sh  e2e-scaffold.ts  generator.test.ts  scaffold.test.ts  templates.test.ts
(+163 files in other folders)
