[package]
name = "{{projectName}}"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
envy = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"

[lints.clippy]
all = "warn"
pedantic = "warn"

[lints.rust]
unsafe_code = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
